# SuperMini2DPowderSimulator

./: .gitignore  README.md  pyproject.toml
docs/: 毕业设计demo1226prompt.md  理论与计算方法.typ  预研究报告.typ
drum2d/: __init__.py  detect.py  evaluate.py  main.py  requirements.txt  simulate.py  utils.py
